# sermon-helper-applications

./: .env.example  .env.test  .gitignore  .prettierignore  CLAUDE.md  CLAUDE_NOTES.md  LucidGlass.shader  PLAN-obs-device-tracker.md  PLAN-rf-ir-handler.md  README.md  eslint.config.js  gemini.md  package.json  pnpm-lock.yaml  tsconfig.e2e.json  tsconfig.json  vite.config.js  vitest.config.ts
presenter-receiver/: .gitignore  Cargo.toml  PRESENTER_RECEIVER.md  build.sh  install.sh
presenter-receiver/src/: main.rs  renderer.rs  ws.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/scripts/: broadlink_bridge.py
src-tauri/sidecars/: impress_controller.py
src-tauri/src/: bible.rs  broadlink.rs  broadlink_commands.rs  companion_api.rs  companion_commands.rs  discovery_commands.rs  discovery_server.rs  lib.rs  local_server.rs  main.rs  mdns_service.rs  mediamtx.rs  obs_devices.rs  video_upload.rs
src-tauri/src/badge/: encrypted_shader.rs  mod.rs
src-tauri/src/commands/: badge.rs  collections.rs  connectors.rs  mod.rs  server.rs  token.rs  updater.rs
src-tauri/src/connectors/: atem.rs  broadlink.rs  discord.rs  facebook.rs  keynote.rs  mod.rs  obs.rs  vmix.rs  youtube.rs
src-tauri/src/database/: embedded.rs  mod.rs
src-tauri/src/database/migrations/: 001_initial.sql  002_social_connectors.sql  003_facebook_privacy.sql  004_cron_jobs.sql  005_normalize_events.sql  006_repair_schedule_status.sql  007_untracked_recordings.sql  008_untracked_duration.sql  009_broadlink.sql  010_bible_verses.sql  011_normalize_bible_references.sql  012_ppt_folders.sql  013_upload_service.sql  014_device_listeners.sql  015_app_settings.sql
src-tauri/src/models/: activity.rs  cron_job.rs  device_listener.rs  event.rs  mod.rs  recording.rs  untracked_recording.rs
src-tauri/src/presentation/: controller.rs  linux_impress.rs  macos_keynote.rs  macos_powerpoint.rs  mod.rs  types.rs  windows_powerpoint.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/server/: auth.rs  caption.rs  mod.rs  openapi.rs  ppt.rs  presenter.rs  routes.rs  websocket.rs
src-tauri/src/uploader/: facebook.rs  mod.rs  youtube.rs
src-tauri/test-server-data/pg_data/: postgresql.conf  postmaster.opts
src-tauri/test-server-data/pg_data/base/1/: 1247_fsm  1249_fsm  1259  2602_vm  2605  2607  2619  2619_fsm  2619_vm  2659  2675  2684  2693  2696  2836_fsm  2838_vm  2840  2840_fsm  2840_vm  2841  3081  3164  3455  3456_vm  3541  3600_fsm  3603  3603_fsm  3609  pg_internal.init
src-tauri/test-server-data/pg_data/base/16384/: 1247  1247_vm  1249  1255  1255_fsm  1259  1259_vm  12975_vm  12979  12980  12980_vm  12990  12990_vm  12994  16385  16396  16466  16492  16510  16533  16538  16553  16562  16580  16603  16604  16606  16609  16623  16624  16626  16646  16648  16679  16701  16703  16724  2187  2228  2337  (+111 more)
src-tauri/test-server-data/pg_data/base/4/: 1249  1249_vm  1255_fsm  1255_vm  1259  1259_vm  12975_fsm  12980_vm  12984  12985_vm  12990  2602_fsm  2606_fsm  2609_fsm  2610_vm  2615_vm  2616  2616_fsm  2618_vm  2619_fsm  2619_vm  2665  2685  2692  2703  2753_fsm  2838  2840_vm  3079  3394  3394_fsm  3456  3764
src-tauri/test-server-data/pg_data/base/5/: 1247  12975  12979  12980  12985  12985_fsm  12990_vm  12994  2605_fsm  2605_vm  2607_vm  2608  2610_fsm  2612  2615_fsm  2617_fsm  2619  2658  2662  2663  2667  2682  2690  2840_fsm  3079_vm  3080  3085  3541_fsm  3603_vm  3764_vm  pg_internal.init
src-tauri/test-server-data/pg_data/global/: 1213_fsm  1213_vm  1260  1260_fsm  1261  1261_fsm  1261_vm  1262  1262_fsm  1262_vm  2672  pg_control  pg_internal.init
src-tauri/test-server-data/pg_data/pg_stat/: pgstat.stat
src-tauri/test-server-data/pg_install/18.3.0/include/: pg_config.h
src-tauri/test-server-data/pg_install/18.3.0/lib/: amcheck.dylib  auto_explain.dylib  basebackup_to_shell.dylib  basic_archive.dylib  btree_gist.dylib  citext.dylib  dblink.dylib  dict_int.dylib  dict_snowball.dylib  dict_xsyn.dylib  file_fdw.dylib  (+27 more)
(+694 files in other folders)
