[package]
name = "presenter-receiver"
version = "0.1.10"
edition = "2021"

[[bin]]
name = "presenter-receiver"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cairo-rs = { version = "0.22", features = ["png"] }
pango = "0.22"
pangocairo = "0.22"
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
minifb = "0.27"

[target.'cfg(target_os = "linux")'.dependencies]
framebuffer = "0.3"

[profile.release]
opt-level = 3
strip = true
