[package]
name = "sermon-helper-tauri"
version = "0.1.0"
description = "Sermon Helper v2 — embedded PostgreSQL + Axum"
authors = ["you"]
edition = "2021"
default-run = "sermon-helper-tauri"

[lib]
name = "sermon_helper_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
base64 = "0.22.1"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
reqwest = { version = "0.13.2", features = ["json", "form", "stream", "multipart"] }
regex = "1.12.3"
urlencoding = "2.1.3"
tauri-plugin-opener = "2.5.3"
tauri-plugin-liquid-glass = "0.1.6"
semver = "1.0.27"

# Desktop-only dependencies (server + database — not available on iOS/Android)
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
obws = { version = "0.14.0", features = ["events"] }
aes = "0.8"
cipher = "0.4"
hex = "0.4"
zip = "2"
dirs = "5"
local-ip-address = "0.6"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
postgresql_embedded = { version = "0.20", features = ["tokio"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
tauri-plugin-dialog = "2.6.0"
tokio-cron-scheduler = "0.15.1"
quick-xml = "0.39.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
